--- a/Client/package.json
+++ b/Client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
+    "ethers": "^6.15.0",
     "framer-motion": "^11.5.4",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
