--- a/backend/package.json
+++ b/backend/package.json
@@ -9,11 +9,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.5.1",
     "express-validator": "^7.0.1",
+    "helmet": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0"
@@ -23,4 +26,4 @@
     "nodemon": "^3.0.2",
     "supertest": "^6.3.3"
   }
-} 
+}
