--- a/Contracts/package.json
+++ b/Contracts/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@nomiclabs/hardhat-etherscan": "^3.1.8",
     "hardhat": "^2.24.3"
   },
   "dependencies": {
